11. network policies/allow-from-one-namespace-to-another/allow-pods-from-hyderabad-to-mysqldb-to-port-3306-only.yaml
# This will block ICMP and allow port 3306 only from hyderabad namespace pods to mysqldb pods
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-hyderabad-to-connect-mysqldb
  namespace: mysqldb
spec:
  podSelector:
    matchLabels:
      app: mysql
  ingress:
  - from:
      - namespaceSelector:
          matchLabels:
            nsp: hyderabad
      - podSelector:
          matchLabels:
            ns: hyderabad 
    ports:
      - protocol: TCP
        port: 3306
