11. network policies/allow-from-one-namespace-to-another/allow-pods-from-hyderabad-to-mysqldb.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-hyderabad-to-connect-mysqldb
  namespace: mysqldb
spec:
  podSelector:
    matchLabels:
      app: mysql
  ingress:
  - from:
      - namespaceSelector:
          matchLabels:
            nsp: hyderabad
      - podSelector:
          matchLabels:
            ns: hyderabad
